[package]
name = "evergreen-rs"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evergreen-rs-types = { path = "evergreen-rs-types" }
evergreen-rs-derive = { path = "evergreen-rs-derive" }

anyhow = "1.0.31"

json = "0.12.4"

reqwest = { version = "0.10", features = ["blocking"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.53"

dirs = "2.0"
log = "0.4.8"

#enum_derive = "0.1.7"
#enum-utils = "0.1.2"

structopt = "0.3.14"

# strum = "0.18.0"
# strum_macros = "0.18.0"
